# webfetcher

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.lightpanda  Dockerfile.webfetcher  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: publish-ghcr.yml
