[project]
name = "webfetcher"
version = "0.1.0"
description = "A FastAPI-based web page fetcher that extracts text using trafilatura and optionally renders JavaScript through a Chromium-compatible CDP endpoint."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uv",
    "uvicorn[standard]",
    "httpx",
    "playwright",
    "trafilatura",
]
