[project]
name = "webfetcher"
version = "0.2.6"
description = "A FastAPI-based web page fetcher that extracts text using trafilatura and optionally renders JavaScript through a Chromium-compatible CDP endpoint."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uv",
    "uvicorn[standard]",
    "httpx",
    "playwright",
    "trafilatura",
    "truststore>=0.10.4",
]
